security.tf
data "http" "myip" {
  url = "http://checkip.amazonaws.com/"
}

locals {
  ssh_cidr = "${trimspace(data.http.myip.response_body)}/32"
}

resource "aws_security_group" "ecs_instances" {
  name        = "${var.project_name}-ecs-sg"
  description = "Allow HTTP and SSH"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [local.ssh_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-ecs-sg"
  }
}
